data/diff_tests/wasmtime/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1249.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\00\02\7f\7f\02\94\80\80\80\00\01\03\65\6e\76\0c"
    "\63\6f\6d\70\6c\65\78\5f\66\75\6e\63\00\00\03\82"
    "\80\80\80\00\01\00\0a\91\80\80\80\00\01\8b\80\80"
    "\80\00\00\03\00\10\00\41\01\0d\00\0b\0b"
  )
""
)